Gtk-3.20&3.22&4.0: [Unity-control-center] Fix missing background in selected-items
In iconview node, we needed to re-define the background colour for
':selected' pseudo-class...

--- a/gtk/sass/3.22/_3rd-party.scss
+++ b/gtk/sass/3.22/_3rd-party.scss
@@ -1164,7 +1164,10 @@ UnityPanelWidget,
 
   > stack > scrolledwindow > viewport > box.vertical > frame > box.vertical {
     // reset $base_color;
-    iconview { background-color: transparent; }
+    iconview.view {
+      background-color: transparent;
+      &:selected { background-color: $selected_bg_color; }
+    }
   }
 }
 
